2012-02-13  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/bits/eventfd.h: New file.
	* sysdeps/unix/sysv/linux/sparc/bits/eventfd.h: Likewise.
	* sysdeps/unix/sysv/linux/sparc/sys/eventfd.h: Remove.
	* sysdeps/unix/sysv/linux/sys/eventfd.h: Get flags from
	<bits/eventfd.h>.
	(EFD_SEMAPHORE, EFD_CLOEXEC, EFD_NONBLOCK): Don't define here.
	* sysdeps/unix/sysv/linux/Makefile (sysdep_headers): Add
	bits/eventfd.h.

2012-02-10  Thomas Schwinge  <thomas@codesourcery.com>

	* sysdeps/i386/fpu/feupdateenv.c (__feupdateenv): Invoke
	__feraiseexcept instead of feraiseexcept.

	* rt/tst-cpuclock1.c: Add a few comments, and error checking for
	nanosleep invocations.
	* rt/tst-cpuclock2.c: Print some values as intended, fix explanatory
	strings, and add error checking for a nanosleep invocations.

2012-02-09  Paul Eggert  <eggert@cs.ucla.edu>

	Replace FSF snail mail address with URLs, as per GNU coding standards.
	Most of the snail mail addresses were wrong anyway, and omitting
	them makes the source code easier to maintain.  Almost all of the
	changes are to license notices and to locale LC_IDENTIFICATION
	addresses, except for this one:
	* manual/libc.texinfo: In "Published by", give the FSF's URL,
	not its snail mail address.

2012-02-09  Richard Henderson  <rth@twiddle.net>

	* sysdeps/unix/sysv/linux/internal_statvfs.c: Use <> for include
	of kernel-features.h.

	* elf/dl-tls.c (update_get_addr): Avoid pointer type mismatch warning.

2012-02-08  Marek Polacek  <polacek@redhat.com>

	* libio/libio.h: Remove _G_HAVE_SYS_CDEFS conditional.
	* sysdeps/mach/hurd/_G_config.h: Remove _G_HAVE_SYS_CDEFS macro.
	* sysdeps/gnu/_G_config.h: Likewise.
	* sysdeps/generic/_G_config.h: Likewise.

2012-02-08  Andreas Schwab  <schwab@linux-m68k.org>

	* sysdeps/i386/fpu/libm-test-ulps: Reduce ldouble ULPs for jn
	tests.
	* sysdeps/x86_64/fpu/libm-test-ulps: Likewise.

	* sysdeps/powerpc/powerpc32/crti.S: New file.
	* sysdeps/powerpc/powerpc32/crtn.S: New file.